--- a/01-Todo-List/index.html
+++ b/01-Todo-List/index.html
@@ -8,7 +8,88 @@
   </head>
   <body>
     <main class="app">
-      <p>Hello world!</p>
+      <section class="greeting">
+        <h2 class="title">
+          What's up, <input type="text" id="name" placeholder="Name here" />
+        </h2>
+      </section>
+
+      <section class="create-todo">
+        <h3>CREATE A TO-DO</h3>
+        <form id="new-todo-form">
+          <h4>What's on your to-do list?</h4>
+          <input
+            type="text"
+            name="content"
+            id="content"
+            placeholder="e.g make a video"
+          />
+
+          <h4>Pick a category</h4>
+          <div class="options">
+            <label>
+              <input
+                type="radio"
+                name="category"
+                id="category1"
+                value="business"
+              />
+              <span class="bubble business"></span>
+              <div>Business</div>
+            </label>
+
+            <label>
+              <input
+                type="radio"
+                name="category"
+                id="category2"
+                value="personal"
+              />
+              <span class="bubble personal"></span>
+              <div>Personal</div>
+            </label>
+          </div>
+
+          <input type="submit" value="Add to-do" />
+        </form>
+      </section>
+
+      <section class="todo-list">
+        <h3>TO-DO LIST</h3>
+        <div class="list" id="todo-list">
+          <div class="todo-item">
+            <label>
+              <input type="checkbox" />
+              <span class="bubble business"></span>
+            </label>
+
+            <div class="todo-content">
+              <input type="text" value="Make a video" readonly />
+            </div>
+
+            <div class="actions">
+              <button class="edit">Edit</button>
+              <button class="delete">Delete</button>
+            </div>
+          </div>
+
+          <div class="todo-item">
+            <label>
+              <input type="checkbox" />
+              <span class="bubble personal"></span>
+            </label>
+
+            <div class="todo-content">
+              <input type="text" value="Get milk" readonly />
+            </div>
+
+            <div class="actions">
+              <button class="edit">Edit</button>
+              <button class="delete">Delete</button>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <script src="main.js"></script>
   </body>
