--- a/01-Todo-List/index.html
+++ b/01-Todo-List/index.html
@@ -57,7 +57,7 @@
       <section class="todo-list">
         <h3>TO-DO LIST</h3>
         <div class="list" id="todo-list">
-          <div class="todo-item">
+          <!-- <div class="todo-item">
             <label>
               <input type="checkbox" />
               <span class="bubble business"></span>
@@ -87,7 +87,7 @@
               <button class="edit">Edit</button>
               <button class="delete">Delete</button>
             </div>
-          </div>
+          </div> -->
         </div>
       </section>
     </main>
